--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,6 +55,12 @@ jobs:
         # If you are analyzing a compiled language, you can modify the 'build-mode' for that language to customize how
         # your codebase is analyzed, see https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/codeql-code-scanning-for-compiled-languages
     steps:
+    - name: Setup Go '1.20'
+      uses: actions/setup-go@v3
+      with:
+        go-version: '1.20'
+      id: go
+      
     - name: Checkout repository
       uses: actions/checkout@v4
 
